# klugscheiser

./: LICENSE  README.md  pyproject.toml
klugscheiser/: client.html  client.py  run.py  server.py  story_system_prompt.md  walkie_talkie_client.html
presentation/: presentation.md
