[project]
name = "klugscheiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepgram-sdk",
    "dotenv>=0.9.9",
    "google-genai>=1.9.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.3",
    "openai>=1.70.0",
    "pyttsx3>=2.98",
    "sounddevice>=0.5.1",
]
